--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.13.4",
     "@craco/craco": "^6.1.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9",
+    "d3-ease": "^2.0.0",
     "postcss": "^7",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
+    "react-icons": "^4.2.0",
+    "react-move": "^6.4.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.4.3",
+    "sass": "^1.32.12",
+    "swiper": "^6.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
