--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9",
+    "caniuse-lite": "^1.0.30001220",
     "d3-ease": "^2.0.0",
     "postcss": "^7",
     "react": "^17.0.2",
